NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/fields/Container_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Container_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Container External Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>