NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/fields/NAOCAP_JDE_Bill_To_Code__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_JDE_Bill_To_Code__c</fullName>
    <description>JDE Bill To Code on the account</description>
    <formula>NATT_Address__r.NATT_Account__r.CONTAINER_JDE_Bill_To_Code__c</formula>
    <label>JDE Bill To Code</label>
    <type>Text</type>
</CustomField>