NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/fields/NAOCAP_JDE_Ship_To_Code__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_JDE_Ship_To_Code__c</fullName>
    <description>This field will show NATT Address object details</description>
    <formula>NATT_Address__r.NATT_JDE_Address_ID__c</formula>
    <label>JDE Ship To Code</label>
    <type>Text</type>
</CustomField>