NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/fields/NATT_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the JDE Address record</description>
    <label>NATT Address</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Contact Point Addresses</relationshipLabel>
    <relationshipName>Contact_Point_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>