NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/fields/NATT_B2B_Dropship__c.field-meta.xml
<CustomField>
    <fullName>NATT_B2B_Dropship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates that the address was created from the B2B checkout flow.</description>
    <label>B2B Dropship</label>
    <type>Checkbox</type>
</CustomField>