NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/recordTypes/NAC.recordType-meta.xml
<RecordType>
    <fullName>NAC</fullName>
    <active>true</active>
    <description>Record type for NAC Container</description>
    <label>NAC</label>
</RecordType>