NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/recordTypes/NATT_Parts_Address.recordType-meta.xml
<RecordType>
    <fullName>NATT_Parts_Address</fullName>
    <active>true</active>
    <description>Record type created specifically for address &quot;Parts Ship To&quot; records synced from NATT_Addresses</description>
    <label>NATT Parts Address</label>
</RecordType>