NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/validationRules/NAOCAP_CheckProfileNAC_IsDefaultFalse.validationRule-meta.xml
<ValidationRule>
    <fullName>NAOCAP_CheckProfileNAC_IsDefaultFalse</fullName>
    <active>true</active>
    <description>Only for NAC Record type</description>
    <errorConditionFormula>AND (
RecordType.Name =&quot;NAC&quot;,
IsDefault=true ,
 $Profile.Name= &quot;NAC Customer Community Profile&quot;
)</errorConditionFormula>
    <errorMessage>Default Address is not editable.</errorMessage>
</ValidationRule>