NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/validationRules/NattValidateCountryCode.validationRule-meta.xml
<ValidationRule>
    <fullName>NattValidateCountryCode</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.Username=&quot;jdeintnactd@carrier.com.corp&quot;,RecordType.DeveloperName != &apos;NAC&apos;,
OR(LEN(Country)!=2,
				AND(Country!=&apos;US&apos;,
				Country!=&apos;CA&apos;,Country!=&apos;BR&apos;,Country!=&apos;MX&apos;)
)
)</errorConditionFormula>
    <errorMessage>Please enter a 2 digit country(US or CA or BR or MX).</errorMessage>
</ValidationRule>