NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/validationRules/NattValidateNameLength.validationRule-meta.xml
<ValidationRule>
    <fullName>NattValidateNameLength</fullName>
    <active>false</active>
    <errorConditionFormula>LEN(Name)&gt;40</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please enter a 40 characters Name</errorMessage>
</ValidationRule>