NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/validationRules/NattValidateStateProvinceLength.validationRule-meta.xml
<ValidationRule>
    <fullName>NattValidateStateProvinceLength</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.Username = &quot;jdeintnactd@carrier.com.corp&quot;,RecordType.DeveloperName != &apos;NAC&apos;,
LEN(State)!=2
)</errorConditionFormula>
    <errorMessage>Please enter a 2 digit State/Province code.</errorMessage>
</ValidationRule>