NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/validationRules/NattValidateUnitedStates.validationRule-meta.xml
<ValidationRule>
    <fullName>NattValidateUnitedStates</fullName>
    <active>true</active>
    <errorConditionFormula>AND($User.Username = &quot;jdeintnactd@carrier.com.corp&quot;,RecordType.DeveloperName != &apos;NAC&apos;,
AND (
Country = &quot;US&quot;,
OR(
LEN(State) != 2,
NOT(
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:&quot; &amp;
&quot;IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:&quot; &amp;
&quot;NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:&quot; &amp;
&quot;WA:WV:WI:WY&quot;, State)
)))
)</errorConditionFormula>
    <errorMessage>Please enter a valid US State.</errorMessage>
</ValidationRule>