NATTQA-ENV/force-app/main/default/objects/ContactPointAddress/listViews/NAOCAP_Addresses.listView-meta.xml
<ListView>
    <fullName>NAOCAP_Addresses</fullName>
    <columns>Name</columns>
    <columns>ADDRESS.STREET</columns>
    <columns>ADDRESS.CITY</columns>
    <columns>ADDRESS.STATE</columns>
    <columns>ADDRESS.ZIP</columns>
    <columns>ADDRESS.COUNTRY</columns>
    <columns>AddressType</columns>
    <columns>IsDefault</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>NAC</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>NAOCAP Addresses</label>
    <sharedTo>
        <role>NAOCAP</role>
    </sharedTo>
</ListView>